# apue.3e.exercises

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: apue.h.08E778EDD9376A4E.idx  ex4_1.c.A4F367910702D68C.idx  ex4_11.c.7E7749F1DDCB653D.idx  ex4_13.c.9DC286F85A2B0B9D.idx  ex4_16.c.4D27D2B6F053E4D3.idx  ex4_2.c.411CD3210F40EB0F.idx  ex4_3.c.536B984452A8A0DD.idx  ex4_4.c.B14C0F4228C37DD6.idx
chapter4/: CMakeLists.txt  answer.md  ex4_1.c  ex4_11.c  ex4_13.c  ex4_16.c  ex4_2.c  ex4_3.c  ex4_4.c  ex4_6.c
chapter5/: CMakeLists.txt  README.md  ex5_1.c  ex5_2.c  ex5_3.c  ex5_5.c  ex5_6.c  ex5_7.c
chapter6/: 62.c  63.c  README.md  ex6_3.c  ex6_4.c
chapter7/: CMakeLists.txt  README.md  ex7_3.c  ex7_6.c
chapter8/: NOTES.md  README.md  echoall.c  ex8_1.c  ex8_2.c  ex8_5.c  ex8_6.c  ex8_7.c  ex8_7_child.c  getpwduid.c  my_system.h  pr_exit.h  python_interpreter  sample8_12.c  sample8_13.c  sample8_16.c  sample8_20.c  sample8_23.c  sample8_30.c  sample8_6.c  testinterp
